# Laboratory_3

./: CMakeLists.txt  README.md  main.cpp
include/: Array_of_figures.hpp  Figure.hpp  FigureArray.hpp  Rectangle.hpp  Rhomb.hpp  Trapezoid.hpp  point.hpp
src/: Array_of_figures.cpp  Figure.cpp  Rectangle.cpp  Rhomb.cpp  Trapezoid.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
